--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "FilmeConnection": "server=localhost;port=3306;database=filmeDb;user=root;password=35789;Persist Security Info=False; Connect Timeout=300"
+    "FilmeConnection": "server=localhost;port=3306;database=cinemadb;user=root;password=35789;Persist Security Info=False; Connect Timeout=300"
   },
   "AllowedHosts": "*"
 }
